Add base styles, fonts, favicon

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,127 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@font-face {
+  font-family: 'Inter';
+  src: url(../../src/assets/fonts/Inter-Regular.woff2) format('woff2'),
+    url(../../src/assets/fonts/Inter-Regular.otf) format('opentype');
+  font-display: swap;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-style: normal;
 }
 
-a {
+@font-face {
+  font-family: 'Inter';
+  src: url(../../src/assets/fonts/Inter-Medium.woff2) format('woff2'),
+    url(../../src/assets/fonts/Inter-Medium.otf) format('opentype');
+  font-display: swap;
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  font-style: normal;
 }
-a:hover {
-  color: #535bf2;
+
+@font-face {
+  font-family: 'Inter';
+  src: url(../../src/assets/fonts/Inter-SemiBold.woff2) format('woff2'),
+    url(../../src/assets/fonts/Inter-SemiBold.otf) format('opentype');
+  font-display: swap;
+  font-weight: 600;
+  font-style: normal;
+}
+
+:root {
+  --primary-white-color: #ffffff;
+  --secondary-white-color: #f1f1f1;
+  --primary-light-gray-color: #f7f8fa;
+  --primary-dark-gray-color: #93939a;
+  --primary-black-color: #1d1e21;
+  --primary-light-black-color: #1d1e2166;
+  --secondary-black-color: #252539;
+  --primary-green-color: #59b17a;
+  --primary-light-green-color: #59b17a1a;
+  --primary-dark-red-color: #e85050;
+  --primary-light-red-color: #e850501a;
+  --primary-font-family: 'Inter', sans-serif;
+  --transition-duration: 0.2s;
+  --transition-timing-function: ease-in-out;
+}
+
+#root {
+  padding: 0;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  font-size: inherit;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-family: var(--primary-font-family);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border: none;
+  color: inherit;
+  padding: 0;
+  outline: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+input,
+textarea,
+select {
+  background-color: inherit;
+  color: inherit;
+  outline: none;
+  margin: 0;
+}
+
+:root {
+  font-family: var(--primary-font-family);
+  color: var(--primary-black-color);
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: #f7f8fa;
+}
+
+@media screen and (min-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
   }
-  a:hover {
-    color: #747bff;
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--primary-green-color);
+    border-radius: 10px;
+    border: 1px solid var(--primary-white-color);
   }
-  button {
-    background-color: #f9f9f9;
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: #ccc;
   }
 }
