--- a/src/components/Header/NavigationBar/NavigationBar.module.css
+++ b/src/components/Header/NavigationBar/NavigationBar.module.css
@@ -1,18 +1,19 @@
 .header {
   width: 100vw;
-  background-color: var(--secondary-white-color);
+  background-color: var(--primary-light-gray-color);
+  border: none;
 }
 
 .wrapper {
   display: none;
 
   @media screen and (min-width: 1440px) {
-    width: 1248px;
+    width: 1184px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 46px;
-    padding-top: 28px;
+    padding-top: 28px 0;
     margin: 0 auto;
   }
 }
