--- a/src/components/NavigationMenu/NavigationMenu.module.css
+++ b/src/components/NavigationMenu/NavigationMenu.module.css
@@ -22,8 +22,9 @@
   line-height: 100%;
   letter-spacing: 0%;
   transition: all var(--transition-duration) var(--transition-timing-function);
-  box-shadow: rgba(149, 157, 165, 0.103) 0px 8px 24px 0px;
+  box-shadow: rgba(149, 157, 165, 0.103) 0px 0px 24px;
 }
+
 .link:not(:last-child)::after {
   content: '';
   width: 15px;
@@ -33,6 +34,7 @@
   left: 50%;
   transform: translateX(-50%);
   background-color: var(--primary-white-color);
+
   @media screen and (min-width: 1440px) {
     bottom: 50%;
     left: auto;
