--- a/src/components/AuthMenu/AuthMenu.module.css
+++ b/src/components/AuthMenu/AuthMenu.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   gap: 14px;
 }
+
 .btnRegister {
   padding: 16px 32px;
   border: 1px solid rgba(241, 241, 241, 0.5);
@@ -13,7 +14,13 @@
   line-height: 100%;
   letter-spacing: 0%;
   text-align: left;
+  transition: all var(--transition-duration) var(--transition-timing-function);
 }
+
+.btnRegister:hover {
+  border-color: rgba(247, 248, 250, 1);
+}
+
 .btnLogin {
   color: var(--secondary-white-color);
   font-size: 14px;
@@ -23,7 +30,12 @@
   text-align: center;
   background: transparent;
 }
+
 .greenColor {
   color: var(--primary-green-color);
   border-color: rgba(89, 177, 122, 0.5);
+}
+
+.greenColor:hover {
+  border-color: rgba(89, 177, 122, 1);
 }
