--- a/src/components/Header/NavigationBar/NavigationBar.module.css
+++ b/src/components/Header/NavigationBar/NavigationBar.module.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     height: 46px;
-    padding-top: 28px 0;
+    padding: 28px 0;
     margin: 0 auto;
   }
 }
