--- a/src/components/NavigationMenu/NavigationMenu.module.css
+++ b/src/components/NavigationMenu/NavigationMenu.module.css
@@ -25,7 +25,7 @@
   box-shadow: rgba(149, 157, 165, 0.103) 0px 0px 24px;
 }
 
-.link:not(:last-child)::after {
+.wrapper .link:not(:last-child)::after {
   content: '';
   width: 15px;
   height: 8px;
@@ -39,7 +39,7 @@
     bottom: 50%;
     left: auto;
     right: -17px;
-    transform: translateY(50%) rotate(-90deg);
+    transform: translateX(0) translateY(50%) rotate(-90deg);
   }
 }
 .linkHome {
