--- a/src/components/PromoBanners/PromoBanners.module.css
+++ b/src/components/PromoBanners/PromoBanners.module.css
@@ -1,18 +1,15 @@
 .promoBannersList {
-  width: 90vw;
+  max-width: 335px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   gap: 16px;
-  padding: 40px 0;
-
-  @media screen and (min-width: 375px) {
-    width: 335px;
-  }
+  padding: 40px 20px;
 
   @media screen and (min-width: 768px) {
     min-width: 670px;
-    padding: 64px 0 60px;
+    padding: 64px 32px 60px;
     gap: 28px;
     flex-direction: row;
   }
