--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,19 @@
 .wrapper {
+  box-sizing: border-box;
   background-color: var(--primary-light-gray-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: 375px) {
+    width: 375px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 1440px;
+  }
 }
