--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,16 +1,27 @@
 .wrapper {
+  height: calc(100vh - 82px);
   padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
+
+  @media screen and (min-width: 768px) {
+    height: calc(100vh - 100px);
+  }
+  @media screen and (min-width: 1440px) {
+    height: calc(100vh - 102px);
+  }
 }
+
 .title {
+  color: var(--primary-dark-red-color);
   font-size: 40px;
   text-align: center;
   text-shadow: rgba(0, 0, 0, 0.055) 0px 5px 10px;
 }
+
 .link {
   display: flex;
   align-items: center;
@@ -29,6 +40,7 @@
   background: transparent;
   transition: all 0.3s ease;
 }
+
 .link:hover {
-  border: 1px solid var(--dark-blue-color);
+  border: 1px solid var(--primary-green-color);
 }
