--- a/src/components/Auth/LoginForm/LoginForm.module.css
+++ b/src/components/Auth/LoginForm/LoginForm.module.css
@@ -80,12 +80,13 @@
   background-color: rgb(63, 148, 95);
 }
 
-.linkLogin {
+.btnLogin {
   color: rgba(29, 30, 33, 0.4);
   font-size: 12px;
   line-height: 18px;
   letter-spacing: 0px;
   text-align: center;
+  background-color: transparent;
 }
 
 .errorMessage {
@@ -129,9 +130,18 @@
   top: 13px;
   background-color: transparent;
 }
+
 .icon {
   fill: none;
   stroke: var(--primary-black-color);
   width: 100%;
   height: 100%;
+}
+
+.formModal {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
