--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,7 +10,7 @@
   position: relative;
   max-height: 75vh;
   max-width: 92vw;
-  background-color: var(--primary-green-color);
+  background-color: var(--primary-white-color);
   box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
   margin: 0 auto;
@@ -20,8 +20,8 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   background: none;
   border: none;
   cursor: pointer;
@@ -32,12 +32,13 @@
   @media screen and (min-width: 768px) {
     top: 20px;
     right: 20px;
-    width: 32px;
-    height: 32px;
+    width: 24px;
+    height: 24px;
   }
 }
 .iconClose {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  stroke: var(--primary-black-color);
 }
