--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Inter';
-  src: url(../../src/assets/fonts/Inter-Regular.woff2) format('woff2'),
-    url(../../src/assets/fonts/Inter-Regular.otf) format('opentype');
+  src: url(../../src/fonts/Inter-Regular.woff2) format('woff2'),
+    url(../../src/fonts/Inter-Regular.otf) format('opentype');
   font-display: swap;
   font-weight: 400;
   font-style: normal;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url(../../src/assets/fonts/Inter-Medium.woff2) format('woff2'),
-    url(../../src/assets/fonts/Inter-Medium.otf) format('opentype');
+  src: url(../../src/fonts/Inter-Medium.woff2) format('woff2'),
+    url(../../src/fonts/Inter-Medium.otf) format('opentype');
   font-display: swap;
   font-weight: 500;
   font-style: normal;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url(../../src/assets/fonts/Inter-SemiBold.woff2) format('woff2'),
-    url(../../src/assets/fonts/Inter-SemiBold.otf) format('opentype');
+  src: url(../../src/fonts/Inter-SemiBold.woff2) format('woff2'),
+    url(../../src/fonts/Inter-SemiBold.otf) format('opentype');
   font-display: swap;
   font-weight: 600;
   font-style: normal;
