--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -18,10 +18,12 @@
   @media screen and (min-width: 375px) {
     max-width: 375px;
   }
+
   @media screen and (min-width: 768px) {
     max-width: 768px;
     padding: 0 32px;
   }
+
   @media screen and (min-width: 1440px) {
     max-width: 1440px;
     padding: 0 96px;
@@ -34,9 +36,15 @@
   background-color: var(--secondary-white-color);
   min-width: 100vw;
   min-height: calc(100vh - 68px);
+
   @media screen and (min-width: 768px) {
     min-height: calc(100vh - 88px);
   }
+}
+
+.content,
+.container {
+  overflow: visible;
 }
 
 .authorizationPage {
@@ -50,6 +58,7 @@
     url(../../images/background@1x.png) 1x,
     url(../../images/background@2x.png) 2x
   );
+
   background-repeat: no-repeat;
   background-position: calc(100% + 120px) calc(100% + 80px);
   background-size: 364px 249px;
