--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -4,6 +4,7 @@
   gap: 14px;
 
   @media screen and (min-width: 768px) {
+    gap: 20px;
   }
 }
 
@@ -52,6 +53,10 @@
   line-height: 140%;
   letter-spacing: 0%;
   text-align: left;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+  }
 }
 
 .date {
@@ -90,4 +95,9 @@
   line-height: 18px;
   letter-spacing: 0%;
   text-align: left;
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
