--- a/src/components/CartOverview/CartOverview.module.css
+++ b/src/components/CartOverview/CartOverview.module.css
@@ -1,11 +1,15 @@
 .cartList {
   width: 100%;
+  max-height: 500px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-right: 8px;
 
   @media screen and (min-width: 1440px) {
     margin-top: 112px;
+    max-height: 700px;
   }
 }
 
