--- a/src/pages/CartPage/CartPage.module.css
+++ b/src/pages/CartPage/CartPage.module.css
@@ -31,10 +31,10 @@
   align-items: center;
   gap: 24px;
   background-image: image-set(
-    url(../../../public/img/background@1x.webp) 1x,
-    url(../../../public/img/background@2x.webp) 2x,
-    url(../../../public/img/background@1x.png) 1x,
-    url(../../../public/img/background@2x.png) 2x
+    url(../../images/background@1x.webp) 1x,
+    url(../../images/background@2x.webp) 2x,
+    url(../../images//background@1x.png) 1x,
+    url(../../images//background@2x.png) 2x
   );
   background-repeat: no-repeat;
   background-position: calc(100% + 50px) calc(100% - 280px);
